# github-actions-lab

./: Dockerfile.actions  README.md  docker-compose-test.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci-action.yml
src/: README.md  main.py  pyproject.toml
src/tests/: main_test.py
