[project]
name = "fastapi-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "coverage>=7.10.6",
    "flake8>=7.3.0",
    "pyrefly>=0.30.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.11",
]
